--- a/docs/csharp/language-reference/compiler-messages/cs1612.md
+++ b/docs/csharp/language-reference/compiler-messages/cs1612.md
@@ -13,17 +13,17 @@ ms.contentlocale: ko-KR
 ms.lasthandoff: 09/04/2018
 ms.locfileid: "43507620"
 ---
-# <a name="compiler-error-cs1612"></a><span data-ttu-id="08694-102">컴파일러 오류 CS1612</span><span class="sxs-lookup"><span data-stu-id="08694-102">Compiler Error CS1612</span></span>
-<span data-ttu-id="08694-103">'expression'은(는) 변수가 아니므로 해당 반환 값을 수정할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="08694-103">Cannot modify the return value of 'expression' because it is not a variable</span></span>  
+# <a name="compiler-error-cs1612"></a><span data-ttu-id="a1835-102">컴파일러 오류 CS1612</span><span class="sxs-lookup"><span data-stu-id="a1835-102">Compiler Error CS1612</span></span>
+<span data-ttu-id="a1835-103">'expression'은(는) 변수가 아니므로 해당 반환 값을 수정할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="a1835-103">Cannot modify the return value of 'expression' because it is not a variable</span></span>  
   
- <span data-ttu-id="08694-104">중간 식의 결과로 생성되었지만 변수에 저장되지 않은 값 형식을 수정하려고 했습니다.</span><span class="sxs-lookup"><span data-stu-id="08694-104">An attempt was made to modify a value type that is produced as the result of an intermediate expression but is not stored in a variable.</span></span> <span data-ttu-id="08694-105">이 오류는 다음 예제와 같이 제네릭 컬렉션의 구조체를 직접 수정하려고 할 때 발생할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="08694-105">This error can occur when you attempt to directly modify a struct in a generic collection, as shown in the following example:</span></span>  
+ <span data-ttu-id="a1835-104">중간 식의 결과로 생성되었지만 변수에 저장되지 않은 값 형식을 수정하려고 했습니다.</span><span class="sxs-lookup"><span data-stu-id="a1835-104">An attempt was made to modify a value type that is produced as the result of an intermediate expression but is not stored in a variable.</span></span> <span data-ttu-id="a1835-105">이 오류는 다음 예제와 같이 제네릭 컬렉션의 구조체를 직접 수정하려고 할 때 발생할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="a1835-105">This error can occur when you attempt to directly modify a struct in a generic collection, as shown in the following example:</span></span>  
   
 ```csharp  
 List<myStruct> list = {…};  
 list[0].Name = "MyStruct42"; //CS1612  
 ```  
   
- <span data-ttu-id="08694-106">구조체를 수정하려면 먼저 지역 변수에 할당하고 변수를 수정한 다음 컬렉션의 항목에 변수를 다시 할당합니다.</span><span class="sxs-lookup"><span data-stu-id="08694-106">To modify the struct, first assign it to a local variable, modify the variable, then assign the variable back to the item in the collection.</span></span>  
+ <span data-ttu-id="a1835-106">구조체를 수정하려면 먼저 지역 변수에 할당하고 변수를 수정한 다음 컬렉션의 항목에 변수를 다시 할당합니다.</span><span class="sxs-lookup"><span data-stu-id="a1835-106">To modify the struct, first assign it to a local variable, modify the variable, then assign the variable back to the item in the collection.</span></span>  
   
 ```csharp  
 List<myStruct> list = {…};  
@@ -32,14 +32,14 @@ ms.Name = "MyStruct42";
 list[0] = ms;  
 ```  
   
- <span data-ttu-id="08694-107">이 오류는 할당 시 값 형식이 복사되기 때문에 발생합니다.</span><span class="sxs-lookup"><span data-stu-id="08694-107">This error occurs because value types are copied on assignment.</span></span> <span data-ttu-id="08694-108">속성 또는 인덱서에서 값 형식을 검색하는 경우 개체 자체에 대한 참조가 아니라 개체 복사본을 얻게 됩니다.</span><span class="sxs-lookup"><span data-stu-id="08694-108">When you retrieve a value type from a property or indexer, you are getting a copy of the object, not a reference to the object itself.</span></span> <span data-ttu-id="08694-109">반환되는 복사본은 저장소 위치(변수)가 아니라 실제로 메서드이기 때문에 속성 또는 인덱서에서 저장되지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="08694-109">The copy that is returned is not stored by the property or indexer because they are actually methods, not storage locations (variables).</span></span> <span data-ttu-id="08694-110">선언하는 변수에 복사본을 저장해야 수정할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="08694-110">You must store the copy into a variable that you declare before you can modify it.</span></span>  
+ <span data-ttu-id="a1835-107">이 오류는 할당 시 값 형식이 복사되기 때문에 발생합니다.</span><span class="sxs-lookup"><span data-stu-id="a1835-107">This error occurs because value types are copied on assignment.</span></span> <span data-ttu-id="a1835-108">속성 또는 인덱서에서 값 형식을 검색하는 경우 개체 자체에 대한 참조가 아니라 개체 복사본을 얻게 됩니다.</span><span class="sxs-lookup"><span data-stu-id="a1835-108">When you retrieve a value type from a property or indexer, you are getting a copy of the object, not a reference to the object itself.</span></span> <span data-ttu-id="a1835-109">반환되는 복사본은 스토리지 위치(변수)가 아니라 실제로 메서드이기 때문에 속성 또는 인덱서에서 저장되지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="a1835-109">The copy that is returned is not stored by the property or indexer because they are actually methods, not storage locations (variables).</span></span> <span data-ttu-id="a1835-110">선언하는 변수에 복사본을 저장해야 수정할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="a1835-110">You must store the copy into a variable that you declare before you can modify it.</span></span>  
   
- <span data-ttu-id="08694-111">이 경우 속성 또는 인덱서가 저장소 위치인 기존 개체에 대한 참조를 반환하기 때문에 참조 형식에서는 오류가 발생하지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="08694-111">The error does not occur with reference types because a property or indexer in that case returns a reference to an existing object, which is a storage location.</span></span>  
+ <span data-ttu-id="a1835-111">이 경우 속성 또는 인덱서가 스토리지 위치인 기존 개체에 대한 참조를 반환하기 때문에 참조 형식에서는 오류가 발생하지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="a1835-111">The error does not occur with reference types because a property or indexer in that case returns a reference to an existing object, which is a storage location.</span></span>  
   
- <span data-ttu-id="08694-112">클래스 또는 구조체를 정의하는 경우 구조체의 멤버에 대한 액세스를 제공하도록 속성 선언을 수정하여 이 오류를 해결할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="08694-112">If you are defining the class or struct, you can resolve this error by modifying your property declaration to provide access to the members of a struct.</span></span> <span data-ttu-id="08694-113">클라이언트 코드를 작성하는 경우 구조체의 고유한 인스턴스를 만들고, 해당 필드를 수정한 다음 전체 구조체를 속성에 다시 할당하여 오류를 해결할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="08694-113">If you are writing client code, you can resolve the error by creating your own instance of the struct, modifying its fields, and then assigning the entire struct back to the property.</span></span> <span data-ttu-id="08694-114">세 번째 방법으로 구조체를 클래스로 변경할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="08694-114">As a third alternative, you can change your struct to a class.</span></span>  
+ <span data-ttu-id="a1835-112">클래스 또는 구조체를 정의하는 경우 구조체의 멤버에 대한 액세스를 제공하도록 속성 선언을 수정하여 이 오류를 해결할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="a1835-112">If you are defining the class or struct, you can resolve this error by modifying your property declaration to provide access to the members of a struct.</span></span> <span data-ttu-id="a1835-113">클라이언트 코드를 작성하는 경우 구조체의 고유한 인스턴스를 만들고, 해당 필드를 수정한 다음 전체 구조체를 속성에 다시 할당하여 오류를 해결할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="a1835-113">If you are writing client code, you can resolve the error by creating your own instance of the struct, modifying its fields, and then assigning the entire struct back to the property.</span></span> <span data-ttu-id="a1835-114">세 번째 방법으로 구조체를 클래스로 변경할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="a1835-114">As a third alternative, you can change your struct to a class.</span></span>  
   
-## <a name="example"></a><span data-ttu-id="08694-115">예</span><span class="sxs-lookup"><span data-stu-id="08694-115">Example</span></span>  
- <span data-ttu-id="08694-116">CS1612는 다음 예제와 같이 전체 구조체를 반환하는 바깥쪽 클래스의 속성을 통해 구조체의 멤버에 액세스하려는 경우에도 발생합니다.</span><span class="sxs-lookup"><span data-stu-id="08694-116">CS1612 also occurs when you attempt to access the member of a struct through a property on an enclosing class that is returning the entire struct, as shown in the following example:</span></span>  
+## <a name="example"></a><span data-ttu-id="a1835-115">예</span><span class="sxs-lookup"><span data-stu-id="a1835-115">Example</span></span>  
+ <span data-ttu-id="a1835-116">CS1612는 다음 예제와 같이 전체 구조체를 반환하는 바깥쪽 클래스의 속성을 통해 구조체의 멤버에 액세스하려는 경우에도 발생합니다.</span><span class="sxs-lookup"><span data-stu-id="a1835-116">CS1612 also occurs when you attempt to access the member of a struct through a property on an enclosing class that is returning the entire struct, as shown in the following example:</span></span>  
   
 ```csharp  
 // CS1612.cs  
@@ -84,8 +84,8 @@ public class MyClass
 }  
 ```  
   
-## <a name="see-also"></a><span data-ttu-id="08694-117">참고 항목</span><span class="sxs-lookup"><span data-stu-id="08694-117">See Also</span></span>  
+## <a name="see-also"></a><span data-ttu-id="a1835-117">참고 항목</span><span class="sxs-lookup"><span data-stu-id="a1835-117">See Also</span></span>  
 
-- [<span data-ttu-id="08694-118">구조체</span><span class="sxs-lookup"><span data-stu-id="08694-118">Structs</span></span>](../../../csharp/programming-guide/classes-and-structs/structs.md)  
-- [<span data-ttu-id="08694-119">값 형식</span><span class="sxs-lookup"><span data-stu-id="08694-119">Value Types</span></span>](../../../csharp/language-reference/keywords/value-types.md)  
-- [<span data-ttu-id="08694-120">참조 형식</span><span class="sxs-lookup"><span data-stu-id="08694-120">Reference Types</span></span>](../../../csharp/language-reference/keywords/reference-types.md)
+- [<span data-ttu-id="a1835-118">구조체</span><span class="sxs-lookup"><span data-stu-id="a1835-118">Structs</span></span>](../../../csharp/programming-guide/classes-and-structs/structs.md)  
+- [<span data-ttu-id="a1835-119">값 형식</span><span class="sxs-lookup"><span data-stu-id="a1835-119">Value Types</span></span>](../../../csharp/language-reference/keywords/value-types.md)  
+- [<span data-ttu-id="a1835-120">참조 형식</span><span class="sxs-lookup"><span data-stu-id="a1835-120">Reference Types</span></span>](../../../csharp/language-reference/keywords/reference-types.md)
