--- a/docs/csharp/misc/cs0832.md
+++ b/docs/csharp/misc/cs0832.md
@@ -13,17 +13,17 @@ ms.contentlocale: ko-KR
 ms.lasthandoff: 05/04/2018
 ms.locfileid: "33301023"
 ---
-# <a name="compiler-error-cs0832"></a><span data-ttu-id="183a0-102">컴파일러 오류 CS0832</span><span class="sxs-lookup"><span data-stu-id="183a0-102">Compiler Error CS0832</span></span>
-<span data-ttu-id="183a0-103">식 트리에는 대입 연산자를 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="183a0-103">An expression tree may not contain an assignment operator.</span></span>  
+# <a name="compiler-error-cs0832"></a><span data-ttu-id="683da-102">컴파일러 오류 CS0832</span><span class="sxs-lookup"><span data-stu-id="683da-102">Compiler Error CS0832</span></span>
+<span data-ttu-id="683da-103">식 트리에는 대입 연산자를 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="683da-103">An expression tree may not contain an assignment operator.</span></span>  
   
- <span data-ttu-id="183a0-104">식 트리에는 변수 상태가 유지되지 않거나 저장소 위치 개념이 없습니다.</span><span class="sxs-lookup"><span data-stu-id="183a0-104">An expression tree does not preserve variable state or have any concept of a storage location.</span></span>  
+ <span data-ttu-id="683da-104">식 트리에는 변수 상태가 유지되지 않거나 스토리지 위치 개념이 없습니다.</span><span class="sxs-lookup"><span data-stu-id="683da-104">An expression tree does not preserve variable state or have any concept of a storage location.</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="183a0-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="183a0-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="683da-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="683da-105">To correct this error</span></span>  
   
-1.  <span data-ttu-id="183a0-106">람다 또는 쿼리 식에서 대입 연산자를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="183a0-106">Remove the assignment operator from the lambda or query expression.</span></span>  
+1.  <span data-ttu-id="683da-106">람다 또는 쿼리 식에서 대입 연산자를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="683da-106">Remove the assignment operator from the lambda or query expression.</span></span>  
   
-## <a name="example"></a><span data-ttu-id="183a0-107">예제</span><span class="sxs-lookup"><span data-stu-id="183a0-107">Example</span></span>  
- <span data-ttu-id="183a0-108">모든 람다 식에서와 같이 예제 코드에서 `x` 은 값으로 전달되는 입력 매개 변수일 뿐입니다.</span><span class="sxs-lookup"><span data-stu-id="183a0-108">In the example code, as in all lambda expressions, `x` is just an input parameter being passed by value.</span></span> <span data-ttu-id="183a0-109">식 트리에서 해당 값을 변경할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="183a0-109">Its value cannot be changed in an expression tree.</span></span> <span data-ttu-id="183a0-110">대리자 람다에서 변경할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="183a0-110">It can be changed in a delegate lambda.</span></span>  
+## <a name="example"></a><span data-ttu-id="683da-107">예제</span><span class="sxs-lookup"><span data-stu-id="683da-107">Example</span></span>  
+ <span data-ttu-id="683da-108">모든 람다 식에서와 같이 예제 코드에서 `x` 은 값으로 전달되는 입력 매개 변수일 뿐입니다.</span><span class="sxs-lookup"><span data-stu-id="683da-108">In the example code, as in all lambda expressions, `x` is just an input parameter being passed by value.</span></span> <span data-ttu-id="683da-109">식 트리에서 해당 값을 변경할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="683da-109">Its value cannot be changed in an expression tree.</span></span> <span data-ttu-id="683da-110">대리자 람다에서 변경할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="683da-110">It can be changed in a delegate lambda.</span></span>  
   
 ```csharp  
 // cs0843.cs  
